{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 33,
  "lineage": "5744b20a-13b2-c873-5432-1a840ed681e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "k8s_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9261ae4021bb3f6",
            "arn": "arn:aws:ec2:us-east-1:533266976072:elastic-ip/eipalloc-0e9261ae4021bb3f6",
            "association_id": "eipassoc-0dec6e4f6bc85d7b5",
            "domain": "vpc",
            "id": "eipalloc-0e9261ae4021bb3f6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0693fb0d78ee455ba",
            "private_dns": "ip-10-0-3-126.ec2.internal",
            "private_ip": "10.0.3.126",
            "public_dns": "ec2-3-231-197-125.compute-1.amazonaws.com",
            "public_ip": "3.231.197.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-nat-eip"
            },
            "tags_all": {
              "Name": "k8s-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533266976072:internet-gateway/igw-03163705fe4df16be",
            "id": "igw-03163705fe4df16be",
            "owner_id": "533266976072",
            "tags": {
              "Name": "k8s-igw"
            },
            "tags_all": {
              "Name": "k8s-igw"
            },
            "vpc_id": "vpc-0f5852ef01ca790f7"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "k8s_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9261ae4021bb3f6",
            "association_id": "eipassoc-0dec6e4f6bc85d7b5",
            "connectivity_type": "public",
            "id": "nat-08582a923d3021b0c",
            "network_interface_id": "eni-0693fb0d78ee455ba",
            "private_ip": "10.0.3.126",
            "public_ip": "3.231.197.125",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ad37f061a2857d53",
            "tags": {
              "Name": "k8s-nat-gw"
            },
            "tags_all": {
              "Name": "k8s-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.k8s_nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_01",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533266976072:route-table/rtb-032c1f94b185be9b7",
            "id": "rtb-032c1f94b185be9b7",
            "owner_id": "533266976072",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08582a923d3021b0c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s_private_rt"
            },
            "tags_all": {
              "Name": "k8s_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5852ef01ca790f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.k8s_nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.k8s_nat_gw",
            "aws_subnet.public_01",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533266976072:route-table/rtb-0963918e15cd543b8",
            "id": "rtb-0963918e15cd543b8",
            "owner_id": "533266976072",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03163705fe4df16be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s_public_rt"
            },
            "tags_all": {
              "Name": "k8s_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5852ef01ca790f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_rt_association_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043b2e55f47037985",
            "route_table_id": "rtb-032c1f94b185be9b7",
            "subnet_id": "subnet-03d2c13e680b500e1"
          },
          "dependencies": [
            "aws_eip.k8s_nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.k8s_nat_gw",
            "aws_route_table.k8s_private_rt",
            "aws_subnet.private_01",
            "aws_subnet.public_01",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_rt_association_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050f1d99fcc092dd5",
            "route_table_id": "rtb-032c1f94b185be9b7",
            "subnet_id": "subnet-0d53bfd8584b139fe"
          },
          "dependencies": [
            "aws_eip.k8s_nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.k8s_nat_gw",
            "aws_route_table.k8s_private_rt",
            "aws_subnet.private_02",
            "aws_subnet.public_01",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rt_association_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076ac5707f91675db",
            "route_table_id": "rtb-0963918e15cd543b8",
            "subnet_id": "subnet-0ad37f061a2857d53"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.k8s_public_rt",
            "aws_subnet.public_01",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rt_association_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab0f47bd65a2edc5",
            "route_table_id": "rtb-0963918e15cd543b8",
            "subnet_id": "subnet-0da82ba288f9f62f2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.k8s_public_rt",
            "aws_subnet.public_02",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533266976072:subnet/subnet-03d2c13e680b500e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d2c13e680b500e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266976072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f5852ef01ca790f7"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533266976072:subnet/subnet-0d53bfd8584b139fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d53bfd8584b139fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266976072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f5852ef01ca790f7"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533266976072:subnet/subnet-0ad37f061a2857d53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad37f061a2857d53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266976072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-01",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-01",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f5852ef01ca790f7"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533266976072:subnet/subnet-0da82ba288f9f62f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da82ba288f9f62f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266976072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-02",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-02",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f5852ef01ca790f7"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533266976072:vpc/vpc-0f5852ef01ca790f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b360254dbf9e35a4",
            "default_route_table_id": "rtb-06f596ef66a4c931b",
            "default_security_group_id": "sg-023c3c55c582010f6",
            "dhcp_options_id": "dopt-0670e693f7bca4c20",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5852ef01ca790f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f596ef66a4c931b",
            "owner_id": "533266976072",
            "tags": {
              "Name": "k8s-vpc"
            },
            "tags_all": {
              "Name": "k8s-vpc"
            }
          }
        }
      ]
    }
  ]
}